<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_EditProduct">

    <EditText
        android:id="@+id/et_productPrice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/et_margin"
        android:layout_marginLeft="@dimen/et_margin"
        android:layout_marginTop="@dimen/et_margin"
        android:layout_marginEnd="@dimen/et_margin"
        android:layout_marginRight="@dimen/et_margin"
        android:ems="10"
        android:text=""
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_productWeight" />

    <EditText
        android:id="@+id/et_productWeight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/et_margin"
        android:layout_marginLeft="@dimen/et_margin"
        android:layout_marginTop="@dimen/et_margin"
        android:layout_marginEnd="@dimen/et_margin"
        android:layout_marginRight="@dimen/et_margin"
        android:ems="10"
        android:text=""
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_productName" />

    <TextView
        android:id="@+id/tv_editProduct_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin"
        android:layout_marginLeft="@dimen/et_margin"
        android:layout_marginTop="@dimen/et_margin"
        android:layout_marginEnd="@dimen/et_margin"
        android:layout_marginRight="@dimen/et_margin"
        android:text="@string/et_edit_product"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_productName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/et_margin"
        android:layout_marginLeft="@dimen/et_margin"
        android:layout_marginTop="@dimen/et_margin"
        android:layout_marginEnd="@dimen/et_margin"
        android:layout_marginRight="@dimen/et_margin"
        android:ems="10"
        android:text=""
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editProduct_title" />

    <EditText
        android:id="@+id/et_prodctDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin"
        android:layout_marginLeft="@dimen/et_margin"
        android:layout_marginTop="@dimen/et_margin"
        android:layout_marginEnd="@dimen/et_margin"
        android:layout_marginRight="@dimen/et_margin"
        android:ems="10"
        android:text=""
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_productPrice" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="@dimen/et_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_prodctDescription">

        <TextView
            android:id="@+id/tv_availability"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_availability"
            android:textSize="20dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>




    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/et_margin"
        android:layout_marginLeft="@dimen/et_margin"
        android:layout_marginEnd="@dimen/et_margin"
        android:layout_marginRight="@dimen/et_margin"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_txt_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/btnTextColor"
        android:background="@drawable/button_shape"/>

</android.support.constraint.ConstraintLayout>
